[package]
name = "screeps-profiler"
version = "0.1.1"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENCE",
    "README.md",
]
readme = "README.md"
license = "MIT"
description = "Profiling helper libarary for Screeps"
homepage = "https://github.com/snorrwe/screeps-profiler"
repository = "https://github.com/snorrwe/screeps-profiler"
keywords = ["screeps", "profiling", "profiler"]

[lib]
name = "screeps_profiler"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

lazy_static = { version = "1.3", optional = true }
screeps-game-api = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []

screeps = ["screeps-game-api", "lazy_static", "serde_json"]
