[package]
name = "screeps-profiler"
version = "0.1.5"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENCE",
    "README.md",
]
readme = "README.md"
license = "MIT"
description = "Profiling helper libarary for Screeps"
homepage = "https://github.com/snorrwe/screeps-profiler"
repository = "https://github.com/snorrwe/screeps-profiler"
keywords = ["screeps", "profiling", "profiler"]

[lib]
name = "screeps_profiler"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.3"
screeps-game-api = "0.4"
serde_json = "1.0"

[features]
default = ["enabled"]
enabled = []
