[package]
name = "screeps-profiler"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lazy_static = { version = "1.3", optional = true }
screeps-game-api = { version = "0.4", optional = true }

[features]
default = []

screeps = ["screeps-game-api", "lazy_static"]
